# KeyChain

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partition.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig  idf_component.yml  main.cc  tft.cc  tft.h  webserver.cc  webserver.h
spiffs/: index.html  index.html.old
